# youtube-video-article-generator-python

./: hero_database.db  playground.py  pyproject.toml  ruff.toml  transcript-to-artical-web-app-design.txt
app/: server.py
app/api/v1/: __init__.py
app/api/v1/routers/: __init__.py  heroes.py  test.py  youtube_articles.py
app/api/youtube_articles/: __init__.py  generate.py
app/core/: database.py  exceptions.py
app/lib/: llms.py  play.py  test_youtube_models.py  transcript.py  youtube_models.py
app/lib/models/: articles.py
app/lib/tools/: search.py  test_youtube_info.py  youtube_info.py
